--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1344,4 +1344,7 @@
          applied. -->
     <bool name="config_hasRemovableLid">false</bool>
 
+    <!-- Integer to configure panel auto brightness mode when changed -->
+    <integer name="config_panelAutoBrightnessValue">-1</integer>
+
 </resources>
