power: Add panel auto-brightness configuration
 * Some panel hardware requires that we twiddle some knobs in sysfs to
   enable proper display calibration (gamma, etc) when auto-brightness
   is enabled. Add a configuration value to handle this.

Change-Id: I3c793c3520fc6f9a18d5a3abf1fe0df803c5e580

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1761,8 +1761,7 @@
   <java-symbol type="dimen" name="subtitle_shadow_offset" />
   <java-symbol type="dimen" name="subtitle_outline_width" />
 
-  <!-- ################################# AOKP Symbols ############################### 
--->
+  <!-- ################################# AOKP Symbols ############################### -->
 
   <java-symbol type="bool" name="config_smsSamsungCdmaAlternateMessageIDEncoding" />
   <java-symbol type="bool" name="config_samsung_stk" />
@@ -1774,5 +1773,8 @@
 
   <!-- Package Manager -->
   <java-symbol type="array" name="config_disabledComponents" />
+
+  <!-- Panel auto brightness -->
+  <java-symbol type="integer" name="config_panelAutoBrightnessValue" />
 
 </resources>
