--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1347,4 +1347,7 @@
          the GPU to handle. -->
     <integer name="config_wallpaperMaxWidth">-1</integer>
 
+    <!-- The list of components which should be automatically disabled. -->
+    <string-array name="config_disabledComponents" translatable="false">
+    </string-array>
 </resources>
