--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1304,4 +1304,8 @@
         <item>333</item>
         <item>353</item>
     </string-array>
+
+    <!-- Workaround for devices with broken keyboards -->
+    <bool name="config_forceDisableHardwareKeyboard">false</bool>
+
 </resources>
