--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1949,4 +1949,7 @@
 
   <!-- UI theme mode -->
   <java-symbol type="integer" name="config_uiThemeMode" />
+  <!-- Screen record -->
+  <java-symbol type="drawable" name="ic_lock_screen_record" />
+  <java-symbol type="string" name="global_action_screenrecord" />
 </resources>
