--- a/packages/SystemUI/res/layout-land/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout-land/status_bar_recent_panel.xml
@@ -56,13 +56,23 @@
 
         </com.android.systemui.recent.RecentsHorizontalScrollView>
 
-    <ImageView
-            android:id="@+id/recents_clear"
-            android:clickable="true"
+        <com.android.systemui.recent.CircleMemoryMeter
+            android:id="@+id/circle_meter"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:scaleType="center"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_gravity="bottom|left" />
+
+        <ImageView
+            android:id="@+id/recents_clear_all"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="2dp"
             android:layout_gravity="top|right"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/ic_notify_clear" />
 
     </FrameLayout>
