--- a/packages/SystemUI/res/layout-land/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout-land/status_bar_recent_panel.xml
@@ -34,8 +34,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:clipToPadding="false"
-        android:clipChildren="false"
-        android:fitsSystemWindows="true">
+        android:clipChildren="false">
 
         <com.android.systemui.recent.RecentsHorizontalScrollView android:id="@+id/recents_container"
             android:layout_width="wrap_content"
@@ -60,19 +59,17 @@
             android:id="@+id/circle_meter"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
             android:layout_gravity="top|left" />
 
         <ImageView
             android:id="@+id/recents_clear_all"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="2dp"
             android:layout_gravity="top|right"
-            android:padding="10dp"
-            android:scaleType="fitCenter"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
             android:src="@drawable/ic_notify_clear" />
 
     </FrameLayout>
