Improve recents kill all buttons behaviour
Adding programicaly set of margin for devices without HW keys and also respect UI.

Modifications:
query location of Clear All Recents only, if there are apps
cleanup code a bit

Change-Id: Ifd91e8a14d5f7eaaa05bc4958820b97ac6bf2e9c
Signed-off-by: kecinzer <kecinzer@gmail.com>
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/packages/SystemUI/res/layout/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout/status_bar_recent_panel.xml
@@ -32,8 +32,7 @@
         android:background="@drawable/status_bar_recents_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:fitsSystemWindows="true">
+        android:layout_alignParentBottom="true">
 
         <com.android.systemui.recent.RecentsVerticalScrollView
             android:id="@+id/recents_container"
@@ -64,19 +63,19 @@
             android:id="@+id/circle_meter"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="2dp"
-            android:layout_gravity="top|left" />
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_gravity="top|left"
+            android:scaleType="center" />
 
         <ImageView
             android:id="@+id/recents_clear_all"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
             android:layout_gravity="top|right"
-            android:padding="10dp"
-            android:scaleType="fitCenter"
+            android:scaleType="center"
             android:src="@drawable/ic_notify_clear" />
 
     </FrameLayout>
