--- a/packages/SystemUI/res/values-ca/cm_strings.xml
+++ b/packages/SystemUI/res/values-ca/cm_strings.xml
@@ -39,8 +39,8 @@
     <string name="quick_settings_report_bug">Informa d\'un error</string>
     <string name="quick_settings_sync">Sinc</string>
     <string name="quick_settings_sync_off">Sinc off</string>
-    <string name="quick_settings_torch">Torxa</string>
-    <string name="quick_settings_torch_off">Torxa apagada</string>
+    <string name="quick_settings_flashlight">Llanterna</string>
+    <string name="quick_settings_flashlight_off">Llanterna apagada</string>
     <string name="quick_settings_nfc">NFC</string>
     <string name="quick_settings_nfc_off">NFC apagat</string>
     <string name="quick_settings_screen_timeout">Compte enrera</string>
