--- a/packages/SystemUI/res/values-it/cm_strings.xml
+++ b/packages/SystemUI/res/values-it/cm_strings.xml
@@ -38,8 +38,8 @@
     <string name="quick_settings_report_bug">Segnalazione bug</string>
     <string name="quick_settings_sync">Sincronia ON</string>
     <string name="quick_settings_sync_off">Sincronia OFF</string>
-    <string name="quick_settings_torch">Torcia</string>
-    <string name="quick_settings_torch_off">Torcia OFF</string>
+    <string name="quick_settings_Flashlight">Torcia</string>
+    <string name="quick_settings_Flashlight_off">Torcia OFF</string>
     <string name="quick_settings_nfc">NFC</string>
     <string name="quick_settings_nfc_off">NFC OFF</string>
     <string name="quick_settings_screen_timeout">Timeout</string>
