--- a/packages/SystemUI/res/values-pt/cm_strings.xml
+++ b/packages/SystemUI/res/values-pt/cm_strings.xml
@@ -29,8 +29,8 @@
     <string name="quick_settings_usb_tether_on_label">Tethering</string>
     <string name="quick_settings_sync">Sincronização</string>
     <string name="quick_settings_sync_off">Sinc. desl.</string>
-    <string name="quick_settings_torch">Lanterna</string>
-    <string name="quick_settings_torch_off">Lanterna desl.</string>
+    <string name="quick_settings_flashlight">Lanterna</string>
+    <string name="quick_settings_flashlight_off">Lanterna desl.</string>
     <string name="quick_settings_nfc">NFC</string>
     <string name="quick_settings_nfc_off">NFC desligado</string>
     <string name="quick_settings_wifiap_off">Wi-Fi AP desl.</string>
