--- a/packages/SystemUI/res/values-ru/cm_strings.xml
+++ b/packages/SystemUI/res/values-ru/cm_strings.xml
@@ -39,8 +39,8 @@
     <string name="quick_settings_report_bug">Отчёт об ошибке</string>
     <string name="quick_settings_sync">Синхронизация</string>
     <string name="quick_settings_sync_off">Синхронизация выкл.</string>
-    <string name="quick_settings_torch">Фонарик</string>
-    <string name="quick_settings_torch_off">Фонарик выкл.</string>
+    <string name="quick_settings_flashlight">Фонарик</string>
+    <string name="quick_settings_flashlight_off">Фонарик выкл.</string>
     <string name="quick_settings_nfc_off">NFC выкл.</string>
     <string name="quick_settings_screen_timeout">Тайм-аут</string>
     <string name="quick_settings_usb_tether_off_label">Отключено</string>
