--- a/core/res/res/values/symbols_custom.xml
+++ b/core/res/res/values/symbols_custom.xml
@@ -76,4 +76,102 @@
     <java-symbol type="string" name="config_deviceKeyHandlerLib" />
     <java-symbol type="string" name="config_deviceKeyHandlerClass" />
 
+    <!-- Kill App -->
+    <java-symbol type="string" name="app_killed_message" />
+    <java-symbol type="integer" name="config_backKillTimeout" />
+
+    <!-- PowerMenu Screenshot -->
+    <java-symbol type="drawable" name="ic_lock_screenshot" />
+    <java-symbol type="string" name="global_action_screenshot" />
+
+    <!-- PowerMenu Screenrecord -->
+    <java-symbol type="drawable" name="ic_lock_screen_record" />
+    <java-symbol type="string" name="global_action_screenrecord" />
+
+    <!-- Ribbons -->
+    <java-symbol type="layout" name="ribbon_item" />
+    <java-symbol type="id" name="ribbon_container" />
+    <java-symbol type="id" name="ribbon_label" />
+    <java-symbol type="id" name="ribbon_icon" />
+
+    <!-- Wi-Fi AP Notification -->
+    <java-symbol type="string" name="notify_turn_tethering_off_title" />
+
+    <!--  Animations -->
+    <java-symbol type="string" name="animation_fade"/>
+    <java-symbol type="string" name="animation_slide_left"/>
+    <java-symbol type="string" name="animation_slide_right"/>
+    <java-symbol type="string" name="animation_slide_left_no_fade"/>
+    <java-symbol type="string" name="animation_slide_right_no_fade"/>
+    <java-symbol type="string" name="animation_slide_up"/>
+    <java-symbol type="string" name="animation_slide_down"/>
+    <java-symbol type="string" name="animation_default"/>
+    <java-symbol type="string" name="animation_translucent"/>
+    <java-symbol type="string" name="animation_grow_shrink"/>
+    <java-symbol type="string" name="animation_grow_shrink_center"/>
+    <java-symbol type="string" name="animation_grow_shrink_bottom"/>
+    <java-symbol type="string" name="animation_grow_shrink_left"/>
+    <java-symbol type="string" name="animation_grow_shrink_right"/>
+    <java-symbol type="anim" name="shrink_fade_out_ribbon" />
+    <java-symbol type="anim" name="shrink_fade_out_center_ribbon" />
+    <java-symbol type="anim" name="shrink_fade_out_right_ribbon" />
+    <java-symbol type="anim" name="shrink_fade_out_left_ribbon" />
+    <java-symbol type="anim" name="shrink_fade_out_from_bottom_ribbon" />
+    <java-symbol type="anim" name="grow_fade_in_ribbon" />
+    <java-symbol type="anim" name="grow_fade_in_center_ribbon" />
+    <java-symbol type="anim" name="grow_fade_in_left_ribbon" />
+    <java-symbol type="anim" name="grow_fade_in_right_ribbon" />
+    <java-symbol type="anim" name="grow_fade_in_from_bottom_ribbon" />
+    <java-symbol type="anim" name="translucent_enter_ribbon" />
+    <java-symbol type="anim" name="translucent_exit_ribbon" />
+    <java-symbol type="anim" name="translucent_exit_left" />
+    <java-symbol type="anim" name="slide_in_down" />
+    <java-symbol type="anim" name="slide_out_up" />
+    <java-symbol type="anim" name="slide_in_right_ribbon" />
+    <java-symbol type="anim" name="slide_out_right_ribbon" />
+    <java-symbol type="anim" name="slide_in_left_ribbon" />
+    <java-symbol type="anim" name="slide_out_left_ribbon" />
+    <java-symbol type="anim" name="slide_in_right_no_fade" />
+    <java-symbol type="anim" name="slide_out_right_no_fade" />
+    <java-symbol type="anim" name="slide_in_left_no_fade" />
+    <java-symbol type="anim" name="slide_out_left_no_fade" />
+    <java-symbol type="anim" name="slow_fade_in" />
+    <java-symbol type="anim" name="slow_fade_out" />
+    <java-symbol type="anim" name="slide_in_up_ribbon" />
+    <java-symbol type="anim" name="slide_out_down_ribbon" />
+    <java-symbol type="anim" name="no_animation" />
+
+  <!-- WiFi turn off notification -->
+  <java-symbol type="string" name="notify_turn_wifi_off_title" />
+
+  <!-- Hardware Key ReMapping -->
+  <java-symbol type="integer" name="config_deviceHardwareKeys" />
+  <java-symbol type="bool" name="config_wifiApStartInterface" />
+
+  <java-symbol type="bool" name="config_smsSamsungCdmaAlternateMessageIDEncoding" />
+  <java-symbol type="bool" name="config_samsung_stk" />
+  <java-symbol type="integer" name="config_wallpaperMaxWidth" />
+
+  <!-- Notification and battery light -->
+  <java-symbol type="bool" name="config_multiColorNotificationLed" />
+  <java-symbol type="bool" name="config_intrusiveBatteryLed" />
+  <java-symbol type="bool" name="config_multiColorBatteryLed" />
+
+  <!-- Label for the Android system components when they are shown to the user. -->
+  <java-symbol type="string" name="android_system_label" />
+
+  <!-- Toast Animation -->
+  <java-symbol type="style" name="Animation.Toast.Fade" />
+  <java-symbol type="style" name="Animation.Toast.SlideRight" />
+  <java-symbol type="style" name="Animation.Toast.SlideLeft" />
+  <java-symbol type="style" name="Animation.Toast.Xylon" />
+  <java-symbol type="style" name="Animation.Toast.Toko" />
+  <java-symbol type="style" name="Animation.Toast.Tn" />
+  <java-symbol type="style" name="Animation.Toast.Honami" />
+  <java-symbol type="style" name="Animation.Toast.FastFade" />
+  <java-symbol type="style" name="Animation.Toast.GrowFade" />
+  <java-symbol type="style" name="Animation.Toast.GrowFadeCenter" />
+  <java-symbol type="style" name="Animation.Toast.GrowFadeBottom" />
+  <java-symbol type="style" name="Animation.Toast.Translucent" />
+
 </resources>
