--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -66,6 +66,8 @@
     <java-symbol type="anim" name="recent_screen_enter" />
     <java-symbol type="anim" name="recent_screen_fade_out" />
     <!-- On-The-Go -->
-    <java-symbol type="string" name="global_action_onthego" />
+    <java-symbol type="string" name="onthego" />
     <java-symbol type="drawable" name="ic_lock_onthego" />
+    <!-- Screen Record -->
+    <java-symbol type="string" name="global_action_screenrecord" />
 </resources>
