--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -68,4 +68,6 @@
     <!-- On-The-Go -->
     <java-symbol type="string" name="global_action_onthego" />
     <java-symbol type="drawable" name="ic_lock_onthego" />
+    <!-- Screen Record -->
+    <java-symbol type="string" name="global_action_screenrecord" />
 </resources>
